First commit of Fans and Temperatures module

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -338,6 +338,245 @@
 	},
 	"failed": "Failed",
 	"failing": "Failing!",
+	"fans": {
+		"reporttitle": "Fans and Temperatures Report",
+		"tabtitle": "Fans and Temperatures",
+		"fan_0": "Fan 0",
+		"fan_1": "Fan 1",
+		"fan_2": "Fan 2",
+		"fan_3": "Fan 3",
+		"fan_4": "Fan 4",
+		"fan_5": "Fan 5",
+		"fan_6": "Fan 6",
+		"fan_7": "Fan 7",
+		"fan_8": "Fan 8",
+		"fan": "Fan",
+		"ambient_air_0": "Ambient Air 0",
+		"ambient_air_1": "Ambient Air 1",
+		"cpu_0_die": "CPU Die",
+		"cpu_0_diode": "CPU Diode",
+		"cpu_0_heatsink": "CPU Heatsink",
+		"cpuproximity_short": "CPU Proxi",
+		"cpu_0_proximity": "CPU Proximity",
+		"enclosure_base_0": "Enclosure 0",
+		"enclosure_base_1": "Enclosure 1",
+		"enclosure_base_2": "Enclosure 2",
+		"enclosure_base_3": "Enclosure 3",
+		"gpu_0_diode": "GPU Diode",
+		"gpu_0_heatsink": "GPU Heatsink",
+		"gpuproximity_short": "GPU Proxi",
+		"gpu_0_proximity": "GPU Proximity",
+		"lcproximity_shortd": "LCD Proxi",
+		"lcd_proximity": "LCD Proximity",
+		"hddproximity_short": "HDD Proxi",
+		"hdd_proximity": "HDD Proximity",
+		"oddproximity_short": "ODD Proxi",
+		"odd_proximity": "ODD Proximity",
+		"heatsink_0": "Heatsink 0",
+		"heatsink_1": "Heatsink 1",
+		"heatsink_2": "Heatsink 2",
+		"mem_slot_0": "Memory Slot",
+		"memoryslotproxi_short": "Memory Slot Proxi",
+		"mem_slots_proximity": "Memory Slot Proximity",
+		"palm_rest": "Palm Rest",
+		"powersupplyproximity_short": "PSU Proxi",
+		"pwr_supply_proximity": "Power Supply Proximity",
+		"miscproximity_short": "Misc Proxi",
+		"misc_proximity": "Miscellaneous Proximity",
+		"northbridge": "Northbridge",
+		"northbridgediode_short": "N.Bridge Diode",
+		"northbridge_diode": "Northbridge Diode",
+		"northbridgeproximity_short": "N.Bridge Proxi",
+		"northbridge_proximity": "Northbridge Proximity",
+		"thunderbolt_0": "Thunderbolt 0",
+		"thunderbolt_1": "Thunderbolt 1",
+		"rpm": "RPM",
+		"discin": "Optical Disc Inserted",
+		"ta0p2": "Airflow 0",
+		"ta1p2": "Airflow 1",
+		"tbxt": "Battery",
+		"tc0c": "CPU Die Core Digital",
+		"tc0e": "CPU 1",
+		"tc0g": "CPU 0",
+		"tc0j": "CPU 0",
+		"tc0c": "TC0C",
+		"tc0d2": "CPU Diode",
+		"tc0p2": "CPU Proximity",
+		"tc1c": "CPU Core 1",
+		"tc1c2": "CPU Core 1",
+		"tc2c": "CPU Core 2",
+		"tc2c2": "CPU Core 2",
+		"tc3c": "CPU Core 3",
+		"tc3c2": "CPU Core 3",
+		"tc4c": "CPU Core 4",
+		"tcac": "CPU A Heatsink",
+		"tcad": "CPU 1 Package Alt.",
+		"tcag": "TCAG",
+		"tcah": "CPU 1 Heatsink Alt.",
+		"tcas": "TCAS",
+		"tcbc": "CPU B Heatsink",
+		"tcbd": "CPU 2 Package Alt.",
+		"tcbg": "TCBG",
+		"tcbh": "CPU 1 Heatsink Alt.",
+		"tcbs": "TCBS",
+		"tcfp": "TCFP",
+		"tcgc": "PECI GPU",
+		"tcgc2": "PECI GPU",
+		"tcpg": "TCPG",
+		"tcsa": "PECI SA",
+		"tcsc": "PECI SA",
+		"tcsc2": "PECI SA",
+		"tctd": "TCTD",
+		"tcxc": "PECI CPU",
+		"tcxc2": "PECI CPU",
+		"tcsr": "TCSR",
+		"tg0p2": "GPU Proximity",
+		"tg1d": "GPU Die",
+		"tg1f": "TG1F",
+		"tg1d2": "TG1F",
+		"tgtc": "TGTC",
+		"tgtd": "TGTD",
+		"th0a": "TH0A",
+		"th0b": "TH0B",
+		"th0c": "TH0B",
+		"th0f": "TH0F",
+		"th0o": "TH0O",
+		"th0r": "TH0R",
+		"th0v": "TH0V",
+		"th0x": "TH0X",
+		"th0a2": "TH0A",
+		"th0b2": "TH0B",
+		"th0c2": "TH0C",
+		"th0x2": "TH0X",
+		"th1a": "TH1A",
+		"th1b": "TH1B",
+		"th1c": "TH1C",
+		"th1f": "TH1F",
+		"th1o": "TH1O",
+		"th1p": "HDD Bay 2",
+		"th1v": "TH1V",
+		"th1x": "TH1X",
+		"th1a2": "TH1A",
+		"th1b2": "TH1B",
+		"th1c2": "TH1C",
+		"th2f": "TH2F",
+		"th2p": "HDD Bay 3",
+		"th2v": "TH2V",
+		"th3f": "TH3F",
+		"th3p": "HDD Bay 4",
+		"th3c": "TH3C",
+		"th4f": "Th4F",
+		"th4p": "TH4P",
+		"th4v": "TH4V",
+		"thps": "THPS",
+		"thsp": "THSP",
+		"thtg": "THTG",
+		"ti0p": "Thunderbolt 0",
+		"ti1p": "Thunderbolt 1",
+		"tl0v": "TL0V",
+		"tl0p2": "LCD Proximity",
+		"tl1v": "TL1V",
+		"tl2v": "TL2V",
+		"tlav": "TLAV",
+		"tlbv": "TLBV",
+		"tlcv": "TLCV",
+		"tm0p2": "Memory Bank A1",
+		"tm1p": "Memory Bank A2",
+		"tm2p": "TM2P",
+		"tm3p": "TM3P",
+		"tm4p": "TM4P",
+		"tm5p": "TM5P",
+		"tm6p": "TM6P",
+		"tm7p": "TM7P",
+		"tm8p": "Memory Bank B1",
+		"tma1": "TMA1",
+		"tma2": "TMA2",
+		"tma3": "TMA3",
+		"tma4": "TMA4",
+		"tmb1": "TMB1",
+		"tmb2": "TMB2",
+		"tmb3": "TMB3",
+		"tmb4": "TMB4",
+		"tmbs": "TMBS",
+		"tmhs": "TMHS",
+		"tmlb": "TMLB",
+		"tmls": "TMLS",
+		"tmps": "TMPS",
+		"tmpv": "TMPV",
+		"tmtg": "TMTG",
+		"tnfp": "TNFP",
+		"tntg": "TNTG",
+		"to0p2": "ODD Proximity",
+		"tp0p2": "Power Supply Proximity",
+		"tpcd": "Platform Controller Hub Die",
+		"ts0v": "TS0V",
+		"ts2v": "TS2V",
+		"ttf0": "TTF0",
+		"tw0p": "AirPort Proximity",
+		"tw0p2": "AirPort Proximity",
+		"te1f": "TE1F",
+		"te1p": "TE1P",
+		"te1s": "TE1S",
+		"te2f": "TE2F",
+		"te2s": "TE2S",
+		"te3f": "TE3F",
+		"te3s": "TE3S",
+		"te4f": "TE4F",
+		"te4s": "TE4S",
+		"te5f": "TE5F",
+		"te5s": "TE5S",
+		"tegg": "TEGG",
+		"tegp": "TEGP",
+		"terg": "TERG",
+		"tetp": "TETP",
+		"tm0p2": "Memory Slot Proximity",
+		"tm0p3": "Memory Slot Proximity",
+		"tp0c": "Power Supply 1 Alt.",
+		"tp1c": "Power Supply 2 Alt.",
+		"tp1p": "Power Supply 2 ",
+		"tp2h": "TP2H",
+		"tp3h": "TP3H",
+		"tp3v": "TP3V",
+		"tpps": "TPPS",
+		"tptg": "TPTG",
+		"ts0g": "TS0G",
+		"ts0s": "Memory Proximity",
+		"ts1p": "Palm Rest R",
+		"ts1s": "Memory Bank Proximity",
+		"ts2s": "TS2S",
+		"tsqf": "TSQF",
+		"ta0s": "PCI Slot 1 Position 1",
+		"ta1s": "PCI Slot 1 Position 2",
+		"ta2s": "PCI Slot 2 Position 1",
+		"ta3s": "PCI Slot 2 Position 2",
+		"tb0p": "BLC Proximity",
+		"tc0f": "CPU 1",
+		"tc0h": "CPU 1 Heatsink",
+		"tc0j": "CPU 0",
+		"tc1d": "CPU 2 Package",
+		"tc1e": "CPU 2",
+		"tc1f": "CPU 2",
+		"tc1h": "CPU 2 Heatsink",
+		"tc1p": "CPU 2 Proximity",
+		"tc5c": "CPU Core 5",
+		"tc6c": "CPU Core 6",
+		"tc7c": "CPU Core 7",
+		"tc8c": "CPU Core 8",
+		"tchp": "CPU Heatpipe",
+		"tg1h": "GPU Heatsink",
+		"tm1s": "Memory Module A2",
+		"tm8s": "Memory Module B1",
+		"tm9p": "Memory Bank B2",
+		"tm9s": "Memory Module B2",
+		"tn0c": "MCH Die",
+		"tn1p": "Northbridge Proximity 2",
+		"tp0d": "Platform Controller Hub Die",
+		"tp2p": "Power Supply 3",
+		"tp3p": "Power Supply 4",
+		"tp4p": "Power Supply 5",
+		"tp5p": "Power Supply 6",
+		"ts0c": "Expansion Slots"
+	},
 	"filevault": {
 		"status_last_checkin": "Status as of ",
 		"enableddate": "Enable Date",
