Added more sensor keys and descriptions and
made it so that undefined sensors do not show up in client tab

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -369,7 +369,7 @@
 		"lcproximity_shortd": "LCD Proxi",
 		"lcd_proximity": "LCD Proximity",
 		"hddproximity_short": "HDD Proxi",
-		"hdd_proximity": "HDD Proximity",
+		"hdd_proximity": "HDD Bay 1",
 		"oddproximity_short": "ODD Proxi",
 		"odd_proximity": "ODD Proximity",
 		"heatsink_0": "Heatsink 0",
@@ -395,29 +395,29 @@
 		"ta0p2": "Airflow 0",
 		"ta1p2": "Airflow 1",
 		"tbxt": "Battery",
-		"tc0c": "CPU Die Core Digital",
-		"tc0e": "CPU 1",
-		"tc0g": "CPU 0",
-		"tc0j": "CPU 0",
-		"tc0c": "TC0C",
+		"tc0c": "CPU Core 1",
+		"tc0e": "CPU Die PECI",
+		"tc0g": "TC0G",
+		"tc0j": "TC0J",
+		"tc0c": "CPU Core 1",
 		"tc0d2": "CPU Diode",
 		"tc0p2": "CPU Proximity",
-		"tc1c": "CPU Core 1",
-		"tc1c2": "CPU Core 1",
-		"tc2c": "CPU Core 2",
-		"tc2c2": "CPU Core 2",
-		"tc3c": "CPU Core 3",
-		"tc3c2": "CPU Core 3",
-		"tc4c": "CPU Core 4",
+		"tc1c": "CPU Core 2",
+		"tc1c2": "CPU Core 2",
+		"tc2c": "CPU Core 3",
+		"tc2c2": "CPU Core 3",
+		"tc3c": "CPU Core 4",
+		"tc3c2": "CPU Core 4",
+		"tc4c": "CPU Core 5",
 		"tcac": "CPU A Heatsink",
-		"tcad": "CPU 1 Package Alt.",
+		"tcad": "CPU A Package Alt.",
 		"tcag": "TCAG",
-		"tcah": "CPU 1 Heatsink Alt.",
+		"tcah": "CPU A Heatsink Alt.",
 		"tcas": "TCAS",
 		"tcbc": "CPU B Heatsink",
-		"tcbd": "CPU 2 Package Alt.",
+		"tcbd": "CPU B Package Alt.",
 		"tcbg": "TCBG",
-		"tcbh": "CPU 1 Heatsink Alt.",
+		"tcbh": "CPU B Heatsink Alt.",
 		"tcbs": "TCBS",
 		"tcfp": "TCFP",
 		"tcgc": "PECI GPU",
@@ -433,20 +433,20 @@
 		"tg0p2": "GPU Proximity",
 		"tg1d": "GPU Die",
 		"tg1f": "TG1F",
-		"tg1d2": "TG1F",
+		"tg1d2": "GPU Die",
 		"tgtc": "TGTC",
 		"tgtd": "TGTD",
-		"th0a": "TH0A",
-		"th0b": "TH0B",
-		"th0c": "TH0B",
+		"th0a": "SSD A",
+		"th0b": "SSD B",
+		"th0c": "NAND Proximity",
 		"th0f": "TH0F",
-		"th0o": "TH0O",
+		"th0o": "Hard Drive Proximity",
 		"th0r": "TH0R",
 		"th0v": "TH0V",
 		"th0x": "TH0X",
-		"th0a2": "TH0A",
-		"th0b2": "TH0B",
-		"th0c2": "TH0C",
+		"th0a2": "SSD A",
+		"th0b2": "SSD B",
+		"th0c2": "NAND Proximity",
 		"th0x2": "TH0X",
 		"th1a": "TH1A",
 		"th1b": "TH1B",
@@ -466,11 +466,11 @@
 		"th3p": "HDD Bay 4",
 		"th3c": "TH3C",
 		"th4f": "Th4F",
-		"th4p": "TH4P",
+		"th4p": "Drive Bay 4 (On Carrier)",
 		"th4v": "TH4V",
 		"thps": "THPS",
 		"thsp": "THSP",
-		"thtg": "THTG",
+		"thtg": "T29 Proximity",
 		"ti0p": "Thunderbolt 0",
 		"ti1p": "Thunderbolt 1",
 		"tl0v": "TL0V",
@@ -481,22 +481,22 @@
 		"tlbv": "TLBV",
 		"tlcv": "TLCV",
 		"tm0p2": "Memory Bank A1",
-		"tm1p": "Memory Bank A2",
-		"tm2p": "TM2P",
-		"tm3p": "TM3P",
-		"tm4p": "TM4P",
-		"tm5p": "TM5P",
-		"tm6p": "TM6P",
-		"tm7p": "TM7P",
-		"tm8p": "Memory Bank B1",
-		"tma1": "TMA1",
-		"tma2": "TMA2",
-		"tma3": "TMA3",
-		"tma4": "TMA4",
-		"tmb1": "TMB1",
-		"tmb2": "TMB2",
-		"tmb3": "TMB3",
-		"tmb4": "TMB4",
+		"tm1p": "Memory Module 1 Proximity",
+		"tm2p": "Memory Module 2 Proximity",
+		"tm3p": "Memory Module 3 Proximity",
+		"tm4p": "Memory Module 4 Proximity",
+		"tm5p": "Memory Module 5 Proximity",
+		"tm6p": "Memory Module 6 Proximity",
+		"tm7p": "Memory Module 7 Proximity",
+		"tm8p": "Memory Module 8 Proximity",
+		"tma1": "Memory Bank A1",
+		"tma2": "Memory Bank A2",
+		"tma3": "Memory Bank A3",
+		"tma4": "Memory Bank A4",
+		"tmb1": "Memory Bank B1",
+		"tmb2": "Memory Bank B2",
+		"tmb3": "Memory Bank B3",
+		"tmb4": "Memory Bank B4",
 		"tmbs": "TMBS",
 		"tmhs": "TMHS",
 		"tmlb": "TMLB",
@@ -504,28 +504,28 @@
 		"tmps": "TMPS",
 		"tmpv": "TMPV",
 		"tmtg": "TMTG",
-		"tnfp": "TNFP",
+		"tnfp": "Heat Pipe Heatsink",
 		"tntg": "TNTG",
 		"to0p2": "ODD Proximity",
 		"tp0p2": "Power Supply Proximity",
 		"tpcd": "Platform Controller Hub Die",
-		"ts0v": "TS0V",
+		"ts0v": "SSD Load Side",
 		"ts2v": "TS2V",
 		"ttf0": "TTF0",
 		"tw0p": "AirPort Proximity",
 		"tw0p2": "AirPort Proximity",
 		"te1f": "TE1F",
 		"te1p": "TE1P",
-		"te1s": "TE1S",
+		"te1s": "PCIE Slot 1",
 		"te2f": "TE2F",
-		"te2s": "TE2S",
+		"te2s": "PCIE Slot 2",
 		"te3f": "TE3F",
-		"te3s": "TE3S",
+		"te3s": "PCIE Slot 3",
 		"te4f": "TE4F",
-		"te4s": "TE4S",
+		"te4s": "PCIE Slot 4",
 		"te5f": "TE5F",
-		"te5s": "TE5S",
-		"tegg": "TEGG",
+		"te5s": "PCIE Slot 5",
+		"tegg": "PCIe GPU",
 		"tegp": "TEGP",
 		"terg": "TERG",
 		"tetp": "TETP",
@@ -533,9 +533,9 @@
 		"tm0p3": "Memory Slot Proximity",
 		"tp0c": "Power Supply 1 Alt.",
 		"tp1c": "Power Supply 2 Alt.",
-		"tp1p": "Power Supply 2 ",
-		"tp2h": "TP2H",
-		"tp3h": "TP3H",
+		"tp1p": "Powerboard Proximity",
+		"tp2h": "Power Supply Heatsink",
+		"tp3h": "Power Primary Heatsink",
 		"tp3v": "TP3V",
 		"tpps": "TPPS",
 		"tptg": "TPTG",
@@ -575,6 +575,28 @@
 		"tp3p": "Power Supply 4",
 		"tp4p": "Power Supply 5",
 		"tp5p": "Power Supply 6",
+		"tl1p": "Timing Controller",
+		"tgvp": "Radeon GPU VRAM",
+		"tarc": "Airflow Right Side",
+		"talc": "Airflow Left Side",
+		"ttrd": "Right Thunderbolt Proximity",
+		"ttld": "Left Thunderbolt Proximity",
+		"th0n": "CPU Vcc Gfx",
+		"ts2p": "S2 Camera Proximity",
+		"tg0t": "GPU Discrete Thermal Diode",
+		"tc2p": "CPU B Ambient 1",
+		"tc3p": "CPU B Ambient 2",
+		"tg0c": "Mezzanine GPU Core",
+		"ta2p": "Ambient Air 2",
+		"tg0r": "GPU 1 - VR Proximity",
+		"tg1p": "GPU 2 - Local",
+		"tg1r": "GPU 2 - VR Proximity",
+		"tm0r": "DIMM 1 - VR Proximity",
+		"tm1r": "DIMM 2 - VR Proximity",
+		"te0t": "PCIe Switch Diode",
+		"tp0t": "Power Supply Secondary Heatsink",
+		"tmap": "FBDIMM Riser B VR Area",
+		"th1r": "GPU FB 1.5V High Side",
 		"ts0c": "Expansion Slots"
 	},
 	"filevault": {
