Adjusted hard drive bays

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -369,9 +369,9 @@
 		"lcproximity_shortd": "LCD Proxi",
 		"lcd_proximity": "LCD Proximity",
 		"hddproximity_short": "HDD Proxi",
-		"hdd_proximity": "HDD Bay 1",
+		"hdd_proximity": "Hard Drive Bay",
 		"oddproximity_short": "ODD Proxi",
-		"odd_proximity": "ODD Proximity",
+		"odd_proximity": "Optical Drive Proximity",
 		"heatsink_0": "Heatsink 0",
 		"heatsink_1": "Heatsink 1",
 		"heatsink_2": "Heatsink 2",
@@ -453,20 +453,20 @@
 		"th1c": "TH1C",
 		"th1f": "TH1F",
 		"th1o": "TH1O",
-		"th1p": "HDD Bay 2",
+		"th1p": "Hard Drive Bay 1",
 		"th1v": "TH1V",
 		"th1x": "TH1X",
 		"th1a2": "TH1A",
 		"th1b2": "TH1B",
 		"th1c2": "TH1C",
 		"th2f": "TH2F",
-		"th2p": "HDD Bay 3",
+		"th2p": "Hard Drive Bay 2",
 		"th2v": "TH2V",
 		"th3f": "TH3F",
-		"th3p": "HDD Bay 4",
+		"th3p": "Hard Drive Bay 3",
 		"th3c": "TH3C",
 		"th4f": "Th4F",
-		"th4p": "Drive Bay 4 (On Carrier)",
+		"th4p": "Hard Drive Bay 4",
 		"th4v": "TH4V",
 		"thps": "THPS",
 		"thsp": "THSP",
