Optimized client script, added....
min/max fan speeds to client tab, cleaned up temperatures in views

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -341,6 +341,11 @@
 	"fans": {
 		"reporttitle": "Fans and Temperatures Report",
 		"tabtitle": "Fans and Temperatures",
+		"sensorname": "Sensor Code",
+		"rpm": "RPM",
+		"discin": "Optical Disc Inserted",
+		"maxfan": "Maximum fan speed",
+		"minfan": "Minimum fan speed",
 		"fan_0": "Fan 0",
 		"fan_1": "Fan 1",
 		"fan_2": "Fan 2",
@@ -351,63 +356,63 @@
 		"fan_7": "Fan 7",
 		"fan_8": "Fan 8",
 		"fan": "Fan",
-		"ambient_air_0": "Ambient Air 0",
-		"ambient_air_1": "Ambient Air 1",
-		"cpu_0_die": "CPU Die",
-		"cpu_0_diode": "CPU Diode",
-		"cpu_0_heatsink": "CPU Heatsink",
-		"cpuproximity_short": "CPU Proxi",
-		"cpu_0_proximity": "CPU Proximity",
-		"enclosure_base_0": "Enclosure 0",
-		"enclosure_base_1": "Enclosure 1",
-		"enclosure_base_2": "Enclosure 2",
-		"enclosure_base_3": "Enclosure 3",
-		"gpu_0_diode": "GPU Diode",
-		"gpu_0_heatsink": "GPU Heatsink",
-		"gpuproximity_short": "GPU Proxi",
-		"gpu_0_proximity": "GPU Proximity",
-		"lcproximity_shortd": "LCD Proxi",
-		"lcd_proximity": "LCD Proximity",
-		"hddproximity_short": "HDD Proxi",
-		"hdd_proximity": "Hard Drive Bay",
-		"oddproximity_short": "ODD Proxi",
-		"odd_proximity": "Optical Drive Proximity",
-		"heatsink_0": "Heatsink 0",
-		"heatsink_1": "Heatsink 1",
-		"heatsink_2": "Heatsink 2",
-		"mem_slot_0": "Memory Slot",
-		"memoryslotproxi_short": "Memory Slot Proxi",
-		"mem_slots_proximity": "Memory Slot Proximity",
-		"palm_rest": "Palm Rest",
-		"powersupplyproximity_short": "PSU Proxi",
-		"pwr_supply_proximity": "Power Supply Proximity",
-		"miscproximity_short": "Misc Proxi",
-		"misc_proximity": "Miscellaneous Proximity",
-		"northbridge": "Northbridge",
-		"northbridgediode_short": "N.Bridge Diode",
-		"northbridge_diode": "Northbridge Diode",
-		"northbridgeproximity_short": "N.Bridge Proxi",
-		"northbridge_proximity": "Northbridge Proximity",
-		"thunderbolt_0": "Thunderbolt 0",
-		"thunderbolt_1": "Thunderbolt 1",
-		"rpm": "RPM",
-		"discin": "Optical Disc Inserted",
+		"ta0p": "Ambient Air 0",
+		"ta1p": "Ambient Air 1",
+		"tc0f": "CPU Die",
+		"tc0d": "CPU Diode",
+		"tc0h": "CPU Heatsink",
+		"tc0p_short": "CPU Proxi",
+		"tc0p": "CPU Proximity",
+		"tb0t": "Battery 0",
+		"tb1t": "Battery 1",
+		"tb2t": "Battery 2",
+		"tb3t": "Battery 3",
+		"tg0d": "GPU Diode",
+		"tg0h": "GPU Heatsink",
+		"tg0p_short": "GPU Proxi",
+		"tg0p": "GPU Proximity",
+		"tl0p_short": "LCD Proxi",
+		"tl0p": "LCD Proximity",
+		"th0p_short": "HDD Bay",
+		"th0p": "Hard Drive Bay",
+		"to0p_short": "ODD Proxi",
+		"to0p": "Optical Drive Proximity",
+		"th0h": "Heatsink 0",
+		"th1h": "Heatsink 1",
+		"th2h": "Heatsink 2",
+		"tm0s": "Memory Slot",
+		"tm0p_short": "Memory Slot Proxi",
+		"tm0p": "Memory Slot Proximity",
+		"tm0p4": "Memory Slot Proximity",
+		"ts0p": "Body",
+		"tp0p_short": "PSU Proxi",
+		"tp0p": "Power Supply Proximity",
+		"tm0p_short": "Misc Proxi",
+		"tm0p": "Miscellaneous Proximity",
+		"tn0h": "Northbridge",
+		"tn0d_short": "N.Bridge Diode",
+		"tn0d": "Northbridge Diode",
+		"tn0p_short": "N.Bridge Proxi",
+		"tn0p": "Northbridge Proximity",
+		"ti0p": "Thunderbolt 0",
+		"ti1p": "Thunderbolt 1",
 		"ta0p2": "Airflow 0",
 		"ta1p2": "Airflow 1",
 		"tbxt": "Battery",
-		"tc0c": "CPU Core 1",
 		"tc0e": "CPU Die PECI",
 		"tc0g": "TC0G",
 		"tc0j": "TC0J",
 		"tc0d2": "CPU Diode",
 		"tc0p2": "CPU Proximity",
+		"tc0c": "CPU Core 0",
+		"tc0c2": "CPU Core 0",
 		"tc1c": "CPU Core 1",
-		"tc1c2": "CPU Core 1",
 		"tc2c": "CPU Core 2",
-		"tc2c2": "CPU Core 2",
 		"tc3c": "CPU Core 3",
-		"tc3c2": "CPU Core 3",
 		"tc4c": "CPU Core 4",
+		"tc1c2": "CPU Core 1",
+		"tc2c2": "CPU Core 2",
+		"tc3c2": "CPU Core 3",
 		"tcac": "CPU A Heatsink",
 		"tcad": "CPU A Package Alt.",
 		"tcag": "TCAG",
@@ -472,6 +477,8 @@
 		"thtg": "T29 Proximity",
 		"ti0p": "Thunderbolt 0",
 		"ti1p": "Thunderbolt 1",
+		"ti0p2": "Thunderbolt 0",
+		"ti1p2": "Thunderbolt 1",
 		"tl0v": "TL0V",
 		"tl0p2": "LCD Proximity",
 		"tl1v": "TL1V",
@@ -530,8 +537,8 @@
 		"tetp": "TETP",
 		"tm0p2": "Memory Slot Proximity",
 		"tm0p3": "Memory Slot Proximity",
-		"tp0c": "Power Supply 1 Alt.",
-		"tp1c": "Power Supply 2 Alt.",
+		"tp0c": "Power Supply 1",
+		"tp1c": "Power Supply 2",
 		"tp1p": "Powerboard Proximity",
 		"tp2h": "Power Supply Heatsink",
 		"tp3h": "Power Primary Heatsink",
@@ -540,7 +547,7 @@
 		"tptg": "TPTG",
 		"ts0g": "TS0G",
 		"ts0s": "Memory Proximity",
-		"ts1p": "Palm Rest R",
+		"ts1p": "Palm Rest",
 		"ts1s": "Memory Bank Proximity",
 		"ts2s": "TS2S",
 		"tsqf": "TSQF",
