Format LBAs in client tab

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -864,7 +864,7 @@
 		"loaded_hours": "Loaded Hours",
 		"load_retry_count": "Load Retry Count",
 		"load_friction": "Load Friction",
-		"loadin_time": "Loadin Time",
+		"loadin_time": "Load-in Time",
 		"torqamp_count": "Torq-amp Count",
 		"head_amplitude": "Head Amplitude",
 		"available_reservd_space": "Available Reserved Space",
