Fixed amperage and corrected ints in JS

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -817,7 +817,7 @@
 		"discreet": "Discreet GPU",
 		"externalconnected": "Power Adapter Connected",
 		"timeremaining": "Estimated Time Remaining",
-		"instanttimetoempty": "Estimated Instant Time Remaining",
+		"instanttimetoempty": "Estimated Instant Time To Empty",
 		"cellvoltage": "Cell Voltage Levels",
 		"voltage": "Battery Voltage Level",
 		"permanentfailurestatus": "Battery Has Permanently Failed",
@@ -829,7 +829,7 @@
 		"fullycharged": "Fully Charged",
 		"ischarging": "Is Charging",
 		"designcyclecount": "Design Cycle Count",
-		"avgtimetoempty": "Estimated Average Time Remaining",
+		"avgtimetoempty": "Estimated Average Time To Empty",
 		"adapter": "Power Adapter",
 		"adapter_wattage": "Adapter Wattage",
 		"watts": "Watts",
