Changed standby delay to seconds

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -814,6 +814,8 @@
 		"discharging_watt": "Discharging at",
 		"minute": "minute",
 		"minutes": "minutes",
+		"second": "second",
+		"seconds": "seconds",
 		"discreet": "Discreet GPU",
 		"externalconnected": "Power Adapter Connected",
 		"timeremaining": "Estimated Time Remaining",
