Added managed_installs to listings dropdown

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -626,6 +626,7 @@
 			"hardware": "Hardware",
 			"inventory": "Inventory",
 			"location": "Location",
+			"managed_installs": "Managed Installs",
 			"munki": "Munki",
 			"mrinfo": "MunkiReport",
 			"network": "Network",
