--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -378,6 +378,25 @@
 	},
 	"free_disk_space": "Free Disk Space",
 	"free_disk_space_less_than": "Free Disk Space < __gb__GB",
+	"gpu": {
+		"widgettitle": "GPU Models",
+		"clienttab": "GPUs",
+		"reporttitle": "GPUs Report",
+		"nogpu": "No GPUs Found",
+		"model": "Model",
+		"vendor": "Vendor",
+		"vram": "Video Memory",
+		"vram_short": "VRAM",
+		"vram_shared": "Shared Video Memory",
+		"vram_shared_short": "VRAM Shared",
+		"pcie_width": "PCIe Lane Width",
+		"slot_name": "Slot Name",
+		"device_id": "Device ID",
+		"gmux_version": "gMux Version",
+		"efi_version": "EFI Driver Version",
+		"revision_id": "Revision ID",
+		"rom_revision": "ROM Revision"
+	},
 	"gsx": {
 		"configuration": "Shipping Configuration",
 		"contracttype": "Contract Type",
@@ -622,6 +641,7 @@
 			"disk": "Disk",
 			"displays": "Displays",
 			"findmymac": "Find My Mac",
+			"gpu": "GPUs",
 			"gsx": "GSX",
 			"hardware": "Hardware",
 			"inventory": "Inventory",
