Condensed VRAM columns
(Drop GPU table if testing and retouch gpuinfo.plist on client)

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -389,6 +389,7 @@
 		"vram_short": "VRAM",
 		"vram_shared": "Shared Video Memory",
 		"vram_shared_short": "VRAM Shared",
+		"shared": "Shared",
 		"pcie_width": "PCIe Lane Width",
 		"slot_name": "Slot Name",
 		"device_id": "Device ID",
