First commit of font module

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -376,6 +376,33 @@
 			"title": "Find My Mac"
 		}
 	},
+	"fonts": {
+		"widgettitle": "Installed Fonts",
+		"nofonts": "No Fonts",
+		"type_enabled": "Typeface Enabled",
+		"embeddable": "Embeddable",
+		"outline": "Outline",
+		"valid": "Valid",
+		"path": "Path",
+		"version": "version   ",
+		"trademark": "Trademark",
+		"vendor": "Vendor",
+		"copyright": "Copyright",
+		"description": "Discription",
+		"designer": "Designer",
+		"clienttab": "Fonts",
+		"reporttitle": "Fonts Report",
+		"duplicate": "Duplicate",
+		"copy_protected": "Copy Protected",
+		"enabled": "Font Enabled",
+		"unique": "Unique ID",
+		"style": "Style",
+		"fullname": "Full Name",
+		"family": "Family",
+		"type_name": "Typeface Name",
+		"type": "Type",
+		"name": "Name"
+	},
 	"free_disk_space": "Free Disk Space",
 	"free_disk_space_less_than": "Free Disk Space < __gb__GB",
 	"gsx": {
@@ -622,6 +649,7 @@
 			"disk": "Disk",
 			"displays": "Displays",
 			"findmymac": "Find My Mac",
+			"fonts": "Fonts",
 			"gsx": "GSX",
 			"hardware": "Hardware",
 			"inventory": "Inventory",
