First commit of Homebrew module

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -426,6 +426,68 @@
 		"hardware": "Hardware",
 		"uuid": "Hardware UUID"
 	},
+	"homebrew": {
+		"reporttitle": "Homebrew Report",
+		"clienttitle": "Homebrew",
+		"aliases": "Aliases",
+		"build_dependencies": "Build Dependancies",
+		"caveats": "Caveats",
+		"conflicts_with": "Conflicts With",
+		"dependencies": "Dependencies",
+		"desc": "Description",
+		"full_name": "Full Name",
+		"homepage": "Homepage",
+		"built_as_bottle": "Built as Bottle",
+		"installed_as_dependency": "Installed as Dependency",
+		"installed_on_request": "Installed on Request",
+		"poured_from_bottle": "Poured from Bottle",
+		"runtime_dependencies": "Runtime Dependencies",
+		"used_options": "Options Used When Installed",
+		"installed_versions": "Versions Installed",
+		"keg_only": "Keg Only",
+		"linked_keg": "Linked Keg",
+		"name": "Name",
+		"oldname": "Old Name",
+		"optional_dependencies": "Optional Dependencies",
+		"options": "Available Options",
+		"outdated": "Outdated",
+		"pinned": "Pinned",
+		"recommended_dependencies": "Recommended Dependencies",
+		"requirements": "Requirements",
+		"versions_stable": "Stable Version",
+		"versions_devel": "Development Version Available",
+		"versions_bottle": "Bottle Available",
+		"versions_head": "Head Available"
+	},
+    "homebrew_info": {
+		"reporttitle": "Homebrew Info Report",
+		"clienttitle": "Homebrew Info",
+		"core_tap_head": "Core Tap Head",
+		"core_tap_origin": "Core Tap Origin",
+		"core_tap_last_commit": "Core Tab Last Commit",
+		"head": "Head",
+		"last_commit": "Last Commit",
+		"origin": "Origin",
+		"homebrew_bottle_domain": "Homebrew Bottle Domain",
+		"homebrew_cellar": "Homebrew Cellar",
+		"homebrew_prefix": "Homebrew Prefix",
+		"homebrew_repository_short": "Homebrew Repo",
+		"homebrew_repository": "Homebrew Repository",
+		"homebrew_version": "Homebrew Version",
+		"homebrew_ruby": "Homebrew Ruby",
+		"command_line_tools": "Command Line Tools",
+		"cpu": "CPU",
+		"git": "Git",
+		"clang": "Clang",
+		"java": "Java",
+		"perl": "Perl",
+		"python": "Python",
+		"ruby": "Ruby",
+		"x11": "X11",
+		"xcode": "Xcode",
+		"macos": "macOS",
+		"uuid": "Hardware UUID"
+	},
 	"inactive": "Inactive",
 	"info": "Information",
 	"installed": "Installed",
@@ -645,6 +707,8 @@
 			"gpu": "GPUs",
 			"gsx": "GSX",
 			"hardware": "Hardware",
+			"hbrew": "Homebrew Info",
+			"homebrew_info": "Homebrew Info",
 			"inventory": "Inventory",
 			"location": "Location",
 			"managed_installs": "Managed Installs",
