Fixed listing name

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -707,7 +707,7 @@
 			"gpu": "GPUs",
 			"gsx": "GSX",
 			"hardware": "Hardware",
-			"hbrew": "Homebrew Info",
+			"hbrew": "Homebrew",
 			"homebrew_info": "Homebrew Info",
 			"inventory": "Inventory",
 			"location": "Location",
