Modify header to only list allowed listings

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -637,6 +637,7 @@
 			"caching": "Caching",
 			"clients": "Clients",
 			"certificate": "Certificates",
+			"crashplan": "CrashPlan",
 			"deploystudio": "DeployStudio",
 			"directoryservice": "Directory Service",
 			"disk": "Disk",
@@ -649,6 +650,7 @@
 			"location": "Location",
 			"managed_installs": "Managed Installs",
 			"munki": "Munki",
+			"munkiprotocol": "Munki info",
 			"mrinfo": "MunkiReport",
 			"network": "Network",
 			"power": "Power",
@@ -657,6 +659,7 @@
 			"sccm_status": "SCCM Status",
 			"security": "Security",
 			"softwareupdate": "Software Update",
+			"tag": "Tag",
 			"timemachine": "Time Machine",
 			"usb": "USB Devices",
 			"warranty": "Warranty",
