Add support for Xserves
If testing, drop the table and reinstall client module

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -361,8 +361,8 @@
 		"tc0f": "CPU Die",
 		"tc0d": "CPU Diode",
 		"tc0h": "CPU Heatsink",
-		"tc0p_short": "CPU Proxi",
-		"tc0p": "CPU Proximity",
+		"tc0p_short": "CPU 1 Proxi",
+		"tc0p": "CPU 1 Proximity",
 		"tb0t": "Battery 0",
 		"tb1t": "Battery 1",
 		"tb2t": "Battery 2",
@@ -403,7 +403,7 @@
 		"tc0g": "TC0G",
 		"tc0j": "TC0J",
 		"tc0d2": "CPU Diode",
-		"tc0p2": "CPU Proximity",
+		"tc0p2": "CPU 1 Proximity",
 		"tc0c": "CPU Core 0",
 		"tc0c2": "CPU Core 0",
 		"tc1c": "CPU Core 1",
@@ -503,7 +503,7 @@
 		"tmb2": "Memory Bank B2",
 		"tmb3": "Memory Bank B3",
 		"tmb4": "Memory Bank B4",
-		"tmbs": "TMBS",
+		"tmbs": "Memory Module 11",
 		"tmhs": "TMHS",
 		"tmlb": "TMLB",
 		"tmls": "TMLS",
@@ -570,17 +570,17 @@
 		"tc8c": "CPU Core 8",
 		"tchp": "CPU Heatpipe",
 		"tg1h": "GPU Heatsink",
-		"tm1s": "Memory Module A2",
-		"tm8s": "Memory Module B1",
+		"tm1s": "Memory Module 1",
+		"tm8s": "Memory Module 8",
 		"tm9p": "Memory Bank B2",
-		"tm9s": "Memory Module B2",
+		"tm9s": "Memory Module 9",
 		"tn0c": "MCH Die",
 		"tn1p": "Northbridge Proximity 2",
 		"tp0d": "Platform Controller Hub Die",
-		"tp2p": "Power Supply 3",
-		"tp3p": "Power Supply 4",
-		"tp4p": "Power Supply 5",
-		"tp5p": "Power Supply 6",
+		"tp2p": "PSU1 Secondary Component",
+		"tp3p": "PSU2 Inlet Ambient",
+		"tp4p": "PSU2 Primary Component",
+		"tp5p": "PSU2 Secondary Component",
 		"tl1p": "Timing Controller",
 		"tgvp": "Radeon GPU VRAM",
 		"tarc": "Airflow Right Side",
@@ -603,6 +603,26 @@
 		"tp0t": "Power Supply Secondary Heatsink",
 		"tmap": "FBDIMM Riser B VR Area",
 		"th1r": "GPU FB 1.5V High Side",
+		"ta0g": "TA0G",
+		"ta2g": "TA2G",
+		"ta4s": "RAID Core",
+		"ta5s": "RAID Ambient",
+		"tc2d": "CPU Core 1",
+		"tg0g": "Mezzanine GPU Heatsink",
+		"th1g": "TH1G",
+		"th2g": "TH2G",
+		"th3g": "TH3G",
+		"tm2s": "Memory Module 2",
+		"tm3s": "Memory Module 3",
+		"tm4s": "Memory Module 4",
+		"tm5s": "Memory Module 5",
+		"tm6s": "Memory Module 6",
+		"tm7s": "Memory Module 7",
+		"tmas": "Memory Module 10",
+		"tmcs": "Memory Module 12",
+		"tp0g": "Tp0G",
+		"tp1g": "Tp1G",
+		"tp2g": "Tp2G",
 		"ts0c": "Expansion Slots"
 	},
 	"filevault": {
