Add more sensors

--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -427,9 +427,9 @@
 		"tcgc": "PECI GPU",
 		"tcgc2": "PECI GPU",
 		"tcpg": "TCPG",
-		"tcsa": "PECI SA",
-		"tcsc": "PECI SA",
-		"tcsc2": "PECI SA",
+		"tcsa": "CPU System Agent Core",
+		"tcsc": "CPU System Agent Core",
+		"tcsc2": "CPU System Agent Core",
 		"tctd": "TCTD",
 		"tcxc": "PECI CPU",
 		"tcxc2": "PECI CPU",
@@ -446,7 +446,7 @@
 		"th0f": "TH0F",
 		"th0o": "Hard Drive Proximity",
 		"th0r": "TH0R",
-		"th0v": "TH0V",
+		"th0v": "Virtual DRAM",
 		"th0x": "TH0X",
 		"th0a2": "SSD A",
 		"th0b2": "SSD B",
@@ -582,12 +582,12 @@
 		"tp4p": "PSU2 Primary Component",
 		"tp5p": "PSU2 Secondary Component",
 		"tl1p": "Timing Controller",
-		"tgvp": "Radeon GPU VRAM",
+		"tgvp": "GPU VRAM",
 		"tarc": "Airflow Right Side",
 		"talc": "Airflow Left Side",
 		"ttrd": "Right Thunderbolt Proximity",
 		"ttld": "Left Thunderbolt Proximity",
-		"th0n": "CPU Vcc Gfx",
+		"th0n": "NAND Temp",
 		"ts2p": "S2 Camera Proximity",
 		"tg0t": "GPU Discrete Thermal Diode",
 		"tc2p": "CPU B Ambient 1",
