--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -643,6 +643,7 @@
 			"disk": "Disk",
 			"displays": "Displays",
 			"findmymac": "Find My Mac",
+			"fonts": "Fonts",
 			"gpu": "GPUs",
 			"gsx": "GSX",
 			"hardware": "Hardware",
