Fix unique id for fonts locale

--- a/app/modules/fonts/locales/en.json
+++ b/app/modules/fonts/locales/en.json
@@ -17,7 +17,7 @@
     "duplicate": "Duplicate",
     "copy_protected": "Copy Protected",
     "enabled": "Font Enabled",
-    "unique": "Unique ID",
+    "unique_id": "Unique ID",
     "style": "Style",
     "fullname": "Full Name",
     "family": "Family",
