--- a/assets/locales/en.json
+++ b/assets/locales/en.json
@@ -234,17 +234,7 @@
 			"last_success": "Last Successful Backup",
 			"title": "Time Machine Report"
 		},
-		"username": "Username",
-        "wifi": {
-            "apmode": "AP Mode",
-            "authtype": "802.11X Auth Type",
-            "channel": "Channel",
-            "lasttx": "Last Tx Rate (Mbps)",
-            "linkauthtype": "Link Auth Type",
-            "maxtx": "Max Tx Rate (Mbps)",
-            "noise": "Noise",
-            "state": "WiFi State"
-        }
+		"username": "Username"
 	},
 	"loading": "Loading data from server",
 	"machine": {
@@ -777,24 +767,6 @@
 		"uptime": {
 			"title": "Uptime"
 		}
-	},
-	"wifi": {
-		"apmode": "Access Point Mode",
-		"bssid": "BSSID",
-		"channel": "Channel",
-		"extrssi": "External RSSI",
-		"lasttrx": "Last Transmit Rate (Mbps)",
-		"maxtrx": "Maximum Transmit Rate (Mbps)",
-		"networks": "WiFi Networks",
-		"noise": "Noise Level",
-		"nonetworks": "No Networks",
-		"rssilevel": "RSSI Level",
-		"sharing": "Sharing",
-		"state": "WiFi State",
-		"ssid": "SSID",
-		"xauthtype": "802.11X Authentication Type",
-		"wifiauthtype": "WiFi Authentication Type",
-		"wifiinfo": "WiFi Information"
 	},
 	"yes": "Yes"
 }
